# GeneralizedOptimalSparseDecisionTrees

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README.md  README_PyPI.md  Sconstruct  autobuild  build-wheels.sh  build.py  configure  configure.ac  dependencies.sh  example.ipynb  model.json  nonconvergence_config.json  nonconvergence_dataset_thresholded_compas.csv  nonconvergence_labels.csv  problem-config.json  pyproject.toml  run_example.sh  setup.py  slurm-1595222.out  slurm-1595223.out
.github/workflows/: main.yml  wheels.yml
auto/: acx_pthread.m4  ax_check_cl.m4  boost.sh  gmp.sh  opencl.sh  tbb.sh  wiredtiger.sh
doc/: build.md  configuration.md  dependencies.md  development.md  faqs.md  license.md  usage.md
experiments/configurations/: compas.json  config.json  cost.csv  debug.json  monk1.json
experiments/datasets/: broward_general_2y.csv  compas.csv  compas_del_lite.csv  coupon_carryout.csv  coupon_rest20.csv  fico.csv  monk1.csv  monk2.csv  spiral.csv  summary.csv
experiments/datasets/car_evaluation/: data.csv
experiments/datasets/chudi/: data.csv
experiments/datasets/compas/: compas-2016.csv  processed.csv
experiments/datasets/coupon/: bar-7.csv  data.csv  original.csv
experiments/datasets/fico/: data.csv  fico-binary.csv  fico.names  original.csv
experiments/datasets/gaussian/: hundred.csv  ten.csv  ten_thousand.csv  thousand.csv
experiments/datasets/iris/: setosa.csv  versicolor.csv  virginica.csv
experiments/datasets/monk-1/: train.csv
experiments/datasets/monk-2/: train.csv
experiments/datasets/monk_1/: data.csv  test.csv
experiments/datasets/monk_2/: data.csv  test.csv
experiments/datasets/monk_3/: data.csv  test.csv  train.csv
experiments/datasets/sine/: hundred.csv  ten.csv  ten_thousand.csv  thousand.csv
experiments/datasets/tic-tac-toe/: Index.txt  train.csv
gosdt/: __init__.py  example.py  tutorial.ipynb
gosdt.xcodeproj/: project.pbxproj
gosdt.xcodeproj/xcshareddata/xcschemes/: gosdt (Debug).xcscheme  gosdt (Release).xcscheme  gosdt_tests (Debug).xcscheme  gosdt_tests (Release).xcscheme
gosdt.xcodeproj/xcuserdata/FireWolf.xcuserdatad/xcschemes/: xcschememanagement.plist
gosdt/model/: encoder.py  gosdt.py  model.json  threshold_guess.py  tree_classifier.py
gosdt/model/imbalance/: osdt_imb_v9.py
include/csv/: csv.h
include/opencl/: cl.hpp
notebooks/: Experiments.ipynb  comparison.ipynb  performance.py  profile.ipynb  regularization.ipynb  scalability.ipynb
python/: example.py  experiments.py  gosdt_experiments.py  loader.py  preprocessor.py  requirements.txt  test_installation.ipynb  visualize_example.py
python/data_collection/: feature_selection.py  models.py  profile.py  regularization.py  scalability.py
python/model/: binoct.py  cart.py  dl85.py  encoder.py  gosdt.py  osdt.py  pygosdt.py  threshold_guess.py  tree_classifier.py  tree_encoder.py  visualizer.py
python/model/imbalance/: corels_dt_nosimilar_multicopies.py  osdt_imb_v9.py  osdt_sup.py  rule.py
python/model/osdt_lib/: __rule.py  _osdt.py  _rule.py  osdt.py  osdt_imb_v9.py
python/model/pygosdt_lib/: osdt.py  osdt_penalize_depth.py  osdt_similar_DFS.py  test_bound.py  test_memory.py  test_memory_entropy.py  test_memory_lbound.py  test_memory_noaccu.py  test_memory_noequivp.py  test_memory_noincreaccu.py  test_memory_nolookahead.py  test_memory_nosupport.py  test_memory_objective.py
python/model/pygosdt_lib/data_structures/: capture_cluster.py  dataset.py  hash_table.py  heap_queue.py  interval.py  path_cluster.py  prefix_tree.py  result.py  result_table.py  similarity_index.py  task.py  tree.py  vector.py
python/model/pygosdt_lib/experiments/: accuracy.py  analysis.py  logger.py  scalability.py  visualizer.py
python/model/pygosdt_lib/models/: fibonacci.py  objective.py  osdt_classifier.py  parallel_osdt.py  parallel_osdt_classifier.py  similarity_propagator.py
python/model/pygosdt_lib/parallel/: actor.py  channel.py  cluster.py  dictionary_service.py  queue_service.py
python/model/rbinoct/: cpx_stats_callback.py  learn_class_bin.py  learn_tree_funcs2.py  regtrees.py
src/: bitmask.cpp  bitmask.hpp  configuration.cpp  configuration.hpp  dataset.cpp  dataset.hpp  encoder.cpp  encoder.hpp  gosdt.cpp  gosdt.hpp  graph.cpp  graph.hpp  index.cpp  index.hpp  integrity_violation.hpp  key.cpp  key.hpp  key_pair.cpp  key_pair.hpp  local_state.cpp  local_state.hpp  main.cpp  main.hpp  message.cpp  message.hpp  model.cpp  model.hpp  optimizer.cpp  optimizer.hpp  python_extension.cpp  python_extension.hpp  queue.cpp  queue.hpp  reference.cpp  reference.hpp  state.cpp  state.hpp  task.cpp  task.hpp  tile.cpp  (+3 more)
src/kernels/: execute.hpp  utility.hpp
src/optimizer/diagnosis/: false_convergence.hpp  non_convergence.hpp  trace.hpp  tree.hpp
src/optimizer/dispatch/: dispatch.hpp
src/optimizer/extraction/: models.hpp
test/: test.cpp  test.hpp  test_bitmask.hpp  test_consistency.hpp  test_dataset.hpp  test_graph.hpp  test_index.hpp  test_key.hpp  test_queue.hpp  test_task.hpp
test/fixtures/: binary_sepal.csv  binary_sepal.json  dataset.csv  dataset.json  sepal.csv  sepal.json  sequences.csv  sequences.json  small.csv  tree.csv  tree.json
wheelhouse/: gosdt-0.1.1-cp310-cp310-manylinux_2_24_x86_64.whl  gosdt-0.1.1-cp36-cp36m-manylinux_2_24_x86_64.whl  gosdt-0.1.1-cp37-cp37m-manylinux_2_24_x86_64.whl  gosdt-0.1.1-cp38-cp38-manylinux_2_24_x86_64.whl  gosdt-0.1.1-cp39-cp39-manylinux_2_24_x86_64.whl  gosdt-0.1.1-pp37-pypy37_pp73-manylinux_2_24_x86_64.whl
