[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "setuptools",
    "wheel",
    "distro",
    "attrs",
    "packaging>=20.9",
    "editables==0.2",
    "pandas",
    "scikit-learn",
    "sortedcontainers",
    "gmpy2",
    "matplotlib"
]
build-backend = "setuptools.build_meta"